[package]
name = "regorust"
version = "1.0.0"
edition = "2021"
description = "Rust bindings for the rego-cpp Rego compiler and interpreter"
license = "MIT"
readme = "README.md"
homepage = "https://microsoft.github.io/rego-cpp/"
repository = "https://github.com/microsoft/rego-cpp"

[dependencies]


[build-dependencies]
bindgen = "0.72.1"
